# Humanoid-Robotics-textbook

./: README.md  demo_pipeline.py  example.py  requirements.txt  test_imports.py  test_new_modules.py
backend/: README.md  config.py  example.py  main.py  pyproject.toml
backend/src/: embedder.py  extractor.py  logger.py  monitoring.py  pipeline.py  storage.py  storage.py.backup  structure.py  utils.py  validator.py  validators.py
backend/tests/integration/: test_embedding.py  test_extraction.py  test_pipeline.py  test_storage.py
backend/tests/unit/: test_basic.py  test_embedder.py  test_extractor.py  test_pipeline.py  test_storage.py
history/prompts/005-isaac-ai-robot-brain/: 001-create-nvidia-isaac-spec.spec.prompt.md  002-module-3-planning.plan.prompt.md  1-module-3-planning-nvidia-isaac.plan.prompt.md  2-tasks-to-issues-conversion.tasks.prompt.md  3-module-3-implementation.tasks.prompt.md
specs/003-ros2-educational-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ros2-educational-module/checklists/: requirements.md
specs/004-digital-twin-simulation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-isaac-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-embedding-pipeline/: plan-template.md  spec.md  tasks.md
src/: __init__.py  embedder.py  extractor.py  pipeline.py  storage.py  validator.py
src/cli/: __init__.py  cli.py
src/lib/: __init__.py  config.py  structure.py  utils.py  validators.py
src/models/: models.py
src/services/: __init__.py
(+14 files in other folders)
