[project]
name = "backend"
version = "0.1.0"
description = "URL Ingestion and Embedding Pipeline using Cohere and Qdrant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "cohere>=4.9.0",
    "qdrant-client>=1.9.0",
    "urllib3>=2.0.0"
]
